<resources>
    <string name="app_name">Slovíčky</string>
    <string name="app_name_short">Sč</string>

    <string name="title">Slovíčky</string>
    <string name="cz_flag">u+1F1E8</string>
    <string name="ru_flag">u+1F1F7</string>

    <string name="enter_translation_hint">Translation…</string>
    <string name="swipe">swipe</string>
    <string name="enter_group_name_hint">Group name</string>
    <string name="enter_cz_word_hint">Word</string>
    <string name="enter_ru_word_hint">Translation</string>

    <string name="word">word</string>
    <string name="words">words</string>
    <string name="group">group</string>
    <string name="groups">groups</string>


    <string name="all_word_group_name">All words</string>
    <string name="no_name_group_name">No name</string>

    <string name="no_word">No word</string>
    <string name="no_translation">No translation</string>


    <string name="empty_group">No words yet.</string>
    <string name="add">Add!</string>


    <string name="add_new_group">Add new group</string>
    <string name="add_new_word">Add new word</string>

    <string name="separator_text">don\'t show this words</string>


    <string name="settings">Settings</string>
    <string name="vibrations">Enable vibrations</string>
    <string name="animations">Enable answer animation</string>
    <string name="export_group">Export words</string>
    <string name="import_group">Import words</string>
    <string name="import_group_hint">Open from files</string>
    <string name="theme_light">Light theme</string>
    <string name="theme_dark">Dark theme</string>
    <string name="theme_system">System theme</string>
    <string name="text_size">Words text size: </string>
    <string name="notifications">Notifications</string>
    <string name="dont_show">Dot\'t show</string>
    <string name="send">When</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="every">Every</string>
    <string name="minutes">m.</string>
    <string name="ok">ADD</string>
    <string name="add_words">Add words</string>
    <string name="select_group">Select group:</string>
    <string name="create_all_notifications">Create Notifications!</string>

    <string name="notifications_group_name">Words translations</string>
    <string name="notifications_group_description">Sends random words</string>
    <string name="notification_title">Learn new word!</string>
    <string name="notifications_created">Notifications created!</string>
    <string name="notifications_canceled">Notifications canceled!</string>
    <string name="notification_action">Don\'t send</string>

    <string name="group_saved">Words successfully saved to your external storage</string>
    <string name="open">open</string>

    <string name="permissions">Please accept our permissions</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="in_future_update">Will be in the future update</string>

    <string-array name="app_themes">
        <item>Light theme</item>
        <item>Dark theme</item>
        <item>System theme</item>
    </string-array>


    <string name="startFolderName">Select file</string>
    <string name="empty_folder">Empty folder</string>
    <string name="file_selected">File selected!</string>

    <string name="byte_size">B</string>
    <string name="kilobyte_size">KB</string>
    <string name="megabyte_size">MB</string>
    <string name="gigabyte_size">GB</string>




    <string name="click_on_me">Let\'s add our first word!\nClick on me 😉</string>
    <string name="add_first_word">Here you can add a new word 🦄</string>
    <string name="mix_words">Tap to shuffle words 👍</string>
    <string name="change_language">And here you can change the language 🙌</string>
    <string name="settings_tip">The app settings are here 👽</string>
    <string name="notifications_tip">Add notifications for daily sending 🧠</string>
    <string name="setup_time">Set up your time intervals here ⏰</string>
    <string name="delete_time">Long click to cancel this time 🙅‍♂️</string>
    <string name="add_words_to_send">Add words to send 🍇</string>
    <string name="create_all_notifications_tip">And finally create all the notifications 🥳\nLet\'s get started! 🎉</string>



</resources>













